only about me section and site section left

--- a/Index.html
+++ b/Index.html
@@ -83,7 +83,9 @@
             <div id="THEME2-Container" class="themeContainers"><a href="theme2.html">
                     <h2 class="themeHeader">Basic Animation</h2>
                 </a>
-                <div id="theme2-IMG" class="themesImg"></div>
+                <div id="theme2-IMG" class="themesImg">
+                    <img src="Assets/examimages/2/walking-animation.gif" alt="">
+                </div>
                 <div id="theme2-TXT" class="themesTxt">
                     <p>In this theme, I was exposed to basic concepts of animation, classic storytelling and character design at an introductory level. I also worked with CSS animations and enhanced the activity of the animations using javascript.</p>
                 </div>
@@ -91,7 +93,9 @@
             <div id="THEME3-Container" class="themeContainers"><a href="theme3.html">
                     <h2 class="themeHeader">Basic Content</h2>
                 </a>
-                <div id="theme3-IMG" class="themesImg"></div>
+                <div id="theme3-IMG" class="themesImg">
+                    <img src="Assets/examimages/3/homepage.image.png" alt="">
+                </div>
 
                 <div id="theme3-TXT" class="themesTxt">
                     <p>
@@ -102,7 +106,9 @@
             <div id="THEME4-Container" class="themeContainers"><a href="theme4.html">
                     <h2 id="uxHeader" class="themeHeader">Basic UX</h2>
                 </a>
-                <div id="theme4-IMG" class="themesImg"></div>
+                <div id="theme4-IMG" class="themesImg">
+                    <img src="Assets/examimages/4/themeImg.png" alt="">
+                </div>
                 <div id="theme4-TXT" class="themesTxt">
                     <p>
                         In this theme I gained an insight into the world of user experience design. This theme gave me a basic understanding of how interaction between users and user interfaces works best, along with theories, tools and methods that can be used to gain an insight to how users actually use the system, rather than relying on personal tastes and assumptions.
@@ -111,7 +117,7 @@
             </div>
         </section>
         <div id="footer">
-            <h2>FOOTER</h2>
+            <h2>Hude0009@stud.kea.dk</h2>
         </div>
     </div>
 </body>
