--- a/themeHub.html
+++ b/themeHub.html
@@ -35,12 +35,14 @@
                 <h1>Themes Hub</h1>
             </div>
         </section>
-        <section id="section-Themes" class="themepagesection">
+<section id="section-Themes">
             <h2 id="themesTitle">THEMES </h2>
             <div id="THEME1-Container" class="themeContainers"><a href="theme1.html">
                     <h2 class="themeHeader">Basic Web</h2>
                 </a>
-                <div id="theme1-IMG" class="themesImg"></div>
+                <div id="theme1-IMG" class="themesImg">
+                            <img src="Assets/examimages/1/background.png" alt="">
+                </div>
                 <div id="theme1-TXT" class="themesTxt">
                     <p>In this theme I got to explore the basic terminology within user interface design, digital communication, user testing and responsive web design. It was a basic but intensive introduction to some of the key skillsets that spilled over to the other themes.This theme contained 4 modules:</p>
                     <ul>
@@ -54,7 +56,9 @@
             <div id="THEME2-Container" class="themeContainers"><a href="theme2.html">
                     <h2 class="themeHeader">Basic Animation</h2>
                 </a>
-                <div id="theme2-IMG" class="themesImg"></div>
+                <div id="theme2-IMG" class="themesImg">
+                    <img src="Assets/examimages/2/walking-animation.gif" alt="">
+                </div>
                 <div id="theme2-TXT" class="themesTxt">
                     <p>In this theme, I was exposed to basic concepts of animation, classic storytelling and character design at an introductory level. I also worked with CSS animations and enhanced the activity of the animations using javascript.</p>
                 </div>
@@ -62,7 +66,9 @@
             <div id="THEME3-Container" class="themeContainers"><a href="theme3.html">
                     <h2 class="themeHeader">Basic Content</h2>
                 </a>
-                <div id="theme3-IMG" class="themesImg"></div>
+                <div id="theme3-IMG" class="themesImg">
+                    <img src="Assets/examimages/3/homepage.image.png" alt="">
+                </div>
 
                 <div id="theme3-TXT" class="themesTxt">
                     <p>
@@ -73,7 +79,9 @@
             <div id="THEME4-Container" class="themeContainers"><a href="theme4.html">
                     <h2 id="uxHeader" class="themeHeader">Basic UX</h2>
                 </a>
-                <div id="theme4-IMG" class="themesImg"></div>
+                <div id="theme4-IMG" class="themesImg">
+                    <img src="Assets/examimages/4/themeImg.png" alt="">
+                </div>
                 <div id="theme4-TXT" class="themesTxt">
                     <p>
                         In this theme I gained an insight into the world of user experience design. This theme gave me a basic understanding of how interaction between users and user interfaces works best, along with theories, tools and methods that can be used to gain an insight to how users actually use the system, rather than relying on personal tastes and assumptions.
@@ -81,9 +89,6 @@
                 </div>
             </div>
         </section>
-        <div class="footer">
-            <h2>FOOTER</h2>
-        </div>
     </div>
 </body>
 
