--- a/aboutMe.html
+++ b/aboutMe.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -31,12 +32,15 @@
         <img class="mainImg" src="Assets/images/LARGE/1x/bodyBG.png" alt="">
         <h1 class="articleTitle">ABOUT ME</h1>
         <section class="articleSection">
-            <h2 class="section">Lorem ipsum dolor sit.</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque cum, sequi, deserunt aspernatur laboriosam iste similique! Reiciendis, consectetur eius dicta corporis non cum ad doloribus, placeat consequatur maiores, cupiditate nesciunt.</p>
+            <img src="Assets/examimages/me/me.png" alt="">
+            <h4>
+            My name is Hudeifer Esa, I am currently a first semester student of MMD at Kea.&nbsp;<br />Age: 23<br />Height: Tall'ish<br />Personality: Personable<br />
+            </h4>
         </section>
         <div class="footer">
-            <h2>FOOTER</h2>
+            <h2>Hude0009@stud.kea.dk</h2>
         </div>
     </div>
 </body>
+
 </html>
