--- a/aboutSite.html
+++ b/aboutSite.html
@@ -11,34 +11,40 @@
 </head>
 
 <body>
-       <div class="pageWrapper">
-    <div id="navBar">
-        <div id="logoContainer">
-            <div id="logo"><a href="Index.html">
-                    <img src="Assets/images/1x/Logo1.png" alt="">
+    <div class="pageWrapper">
+        <div id="navBar">
+            <div id="logoContainer">
+                <div id="logo"><a href="Index.html">
+                        <img src="Assets/images/1x/Logo1.png" alt="">
 
-                </a>
+                    </a>
+                </div>
+            </div>
+            <div id="linkContainer">
+                <ul>
+                    <li><a style="text-decoration: none" href="aboutMe.html"> Me </a></li>
+                    <li><a style="text-decoration: none" href="aboutSite.html">This site</a></li>
+                    <li><a style="text-decoration: none" href="themeHub.html">Themes</a></li>
+                </ul>
             </div>
         </div>
-        <div id="linkContainer">
-            <ul>
-                <li><a style="text-decoration: none" href="aboutMe.html"> Me </a></li>
-                <li><a style="text-decoration: none" href="aboutSite.html">This site</a></li>
-                <li><a style="text-decoration: none" href="themeHub.html">Themes</a></li>
-            </ul>
-        </div>
-    </div>
         <img class="mainImg" src="Assets/images/LARGE/1x/bodyBG.png" alt="">
         <h1 class="articleTitle">ABOUT THIS SITE</h1>
         <section class="articleSection">
-            <h2 class="section">Lorem ipsum dolor sit.</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque cum, sequi, deserunt aspernatur laboriosam iste similique! Reiciendis, consectetur eius dicta corporis non cum ad doloribus, placeat consequatur maiores, cupiditate nesciunt.</p>
-            <img src="Assets/images/1x/Logo1.png" alt="#">
+            <h2 class="sectionHeader"> Moodboard </h2>
+            <p>
+                For this site I decided to revisit the pop art theme, this time with the intention of using the bright colours as accents. I was looking for clean and strong contrast, something that was well structured and organised.
+            </p>
+            <img src="documentation/Moodboard/moodboardPNG.png" alt="#">
+            <h2>Style-Tile</h2>
+            <p>
+                Continuing on the themes built on the moodboard, I decided to keep the bright colours, but to achieve the desires clean lines, I sourced inspiration from the dutch painter Mondrian. I liked how he used primary colours that were similar to my own pallet. I though of maybe wrapping texts in a bright coloured border of some sort. With regards to typography I decided to keep roboto, but for the main texts, I decided to go for Oswald font from google fonts. Oswald creates a balanced contrast against the Roboto.
+            </p>
+            <img src="Assets/examimages/site/styletiles.png" alt="">
         </section>
-
-    <div class="footer">
-        <h2>FOOTER</h2>
-    </div>
+        <div class="footer">
+            <h2>Hude0009@stud.kea.dk</h2>
         </div>
+    </div>
 </body>
 </html>
