--- a/theme1.html
+++ b/theme1.html
@@ -67,7 +67,7 @@
             <img src="Assets/examimages/1/colours.jpg" alt="">
         </section>
         <div class="footer">
-            <h2>FOOTER</h2>
+            <h2>Hude0009@stud.kea.dk</h2>
         </div>
     </div>
 </body>
