--- a/theme2.html
+++ b/theme2.html
@@ -91,10 +91,14 @@
             02.04.07 Presentation (short process documentation) pdf
             </h2>
             <a href="documentation/02.04.07%20Presentation.pdf"> Link to short process documentaiton pdf</a>
+            <h3>Project Pool day 1 and 2 links below</h3>
+            <a href="http://hesa.dk/ProjectPool1/Index.html">Drumboard link</a>
+            <a href="http://hesa.dk/project_pool_02/index.html">Calculator</a>
         </section>
-    </div>
+
     <div class="footer">
-        <h2>FOOTER</h2>
+            <h2>Hude0009@stud.kea.dk</h2>
+    </div>
     </div>
 </body>
 
