--- a/theme3.html
+++ b/theme3.html
@@ -82,10 +82,12 @@
                 Link to brochure site.
             </a>
         </section>
-    </div>
+
     <div class="footer">
-        <h2>FOOTER</h2>
+            <h2>Hude0009@stud.kea.dk</h2>
+
     </div>
+        </div>
 </body>
 
 </html>
