--- a/theme4.html
+++ b/theme4.html
@@ -247,11 +247,15 @@
                 <li>Secondly I noticed the slightest of issues with the speed of the animation because the user thinks when the form drops forward that the animation is complete and tries to proceed but then realises animation isn&rsquo;t completely over. I&rsquo;m assuming at first impression its fine, but with repetitive use it will get boring and tiring fast.</li>
                 <li>Also I could add a hover element on the article text and article Image on the newsfeed so that when the user hovers over either the whole section becomes illuminated in some way, indicating to the user that they can press anywhere.</li>
             </ul>
+            <h2>Design sprint 2</h2>
+            <a href="https://xd.adobe.com/view/7fdacf26-f1a3-4517-5029-3f188525e196-09eb/?fullscreen"> Link to the second design sprint</a>
         </section>
-    </div>
-    <div class="footer">
-        <h2>FOOTER</h2>
+        <div class="footer">
+            <h2>Hude0009@stud.kea.dk</h2>
+
+        </div>
     </div>
 </body>
+
 
 </html>
